<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zangnam Live Wallpaper</string>
    <string name="service_label">Zangnam Live Wallpaper</string>
    <string name="description">A Gangnam Wallpaper using found video from a popular ecommerce company.</string>

    <!-- Wallpaper Preferences -->
    <string name="elevator_music_key">elevator_music</string>
    <string name="elevator_music_title">Play Elevator Music</string>
    <string name="elevator_music_summary">Play music when elevator doors open (except when there is a new message).</string>
    <string name="color_filter_key">door_color_filter</string>
    <string name="color_filter_title">Elevator Color Overlay</string>
    <string name="color_filter_summary">Select a color to overlay on top of the elevator.</string>
    <string name="color_filter_reset_key">door_color_filter_reset</string>
    <string name="color_filter_reset_title">Remove Elevator Color Overlay</string>
    <string name="color_filter_reset_summary">Remove the elevator color overlay leaving the default elevator images.</string>
    <string name="open_on_new_text_message_key">text_alert</string>
    <string name="open_on_new_text_message_title">New Text Alert</string>
    <string name="open_on_new_text_message_summary">Open elevator when you receive a new text message, displaying a new text alert badge.</string>
</resources>
